<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cmpt371project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="selectlanguage">Selete Language</string>
    <string name="userName">Username</string>
    <string name="userNameHint">username</string>
    <string name="passwordHint">password</string>
    <string name="passWord">Password</string>
    <string name="logIn">Log in</string>
    <string name="update">Update</string>
    <string name="admin_User">User</string>
    <string name="admin_Children">Children</string>
    <string name="admin_Stats">Stats</string>
    <string name="admin_AddLanguage">Add Language</string>
    <string name="admin_ChooseLanguage">Choose Language</string>
    <string name="admin_Location">Location</string>
    <string name="admin_Update">Update</string>
    <string name="admin_Logout">Log Out</string>
    <string name="children_Location">All Location</string>
    <string name="children_Children">Children</string>
    <string name="children_Search">Search</string>
    <string name="children_add">Add</string>
   	<string name="location_Location">Location</string>
    <string name="location_Children">Children</string>
    <string name="location_Search">Search</string>
    <string name="location_add">Add</string>
    <string name="researcher_Search">Search</string>
    <string name="researcher_add">Add</string>
    <string name="children_edit_save">Save</string>
    <string name="children_edit_firstName">First Name</string>
    <string name="children_edit_lastName">Last Name</string>
    <string name="children_edit_address">Address</string>
    <string name="children_edit_phone">Phone #(option)</string>
    <string name="children_edit_Remove">Remove</string>
    <string name="children_edit_Edit">Edit</string>
    <string name="children_option_takeSurvey">Take Survey</string>
    <string name="children_option_viewStats">View Stats</string>
    <string name="children_option_editinfo">Edit Info</string>
    <string name="children_option_Cancel">Cancel</string>
    <string name="selectlanguage_French">Française</string>
    <string name="selectlanguage_English">English</string>
    <string name="survey_finish_txt">Thank you.\n Do you want to submit answers? \n This can not be undone.</string>
    <string name="survey_finish_cancel">No,go back</string>
    <string name="survey_finish_submit">Yes,go to result</string>
    <string name="survey_option_begin">Begin Survey</string>
    <string name="survey_option_previous">Previous Survey</string>
    <string name="survey_option_Cancel">Cancel</string>
    <string name="survry_Next">Next</string>
    <string name="survey_previous">Previous</string>
    <string name="admin">Admin</string>
    <string name="children_at_location">Children at this location</string>
    <string name="children_edit">Edit Children</string>
    <string name="children_list">Children List</string>
    <string name="children_option">Children Option</string>
    <string name="location_edit">Edit Location</string>
    <string name="location_list">Location List</string>
    <string name="login">Login</string>
    <string name="researcher_option">Researcher Option</string>
    <string name="researcher_edit">Edit Researchers</string>
    <string name="researcher_list">Researchers List</string>
    <string name="researcher_start">Researchers</string>
    <string name="selectLanguage">Select Language</string>
    <string name="survey_finish">Survery Finish</string>
    <string name="survey_option">Survey Option</string>
    <string name="survey">Survey</string>
    <string name="location_Name">Name</string>
    <string name="location_Address_Line1">Address Line 1</string>
    <string name="location_Address_Line2">Address Line 2</string>
    <string name="children_edit_gender">Gender</string>
    <string name="edCh_addr_txt">Address</string>
    <string name="edCh_addr_lab">Address</string>
    <string name="edCh_birth_txt">Birthdate</string>
    <string name="edCh_birth_lab">Birthdate</string>
    <string name="children_edit_PostalCode">Postal Code</string>
    <string name="searchbar_add">Add</string>
    <string name="searchbar_search">Search</string>
    <string name="children_edit_password">Password</string>
    <string name="children_edit_userName">Username</string>
    <string name="inputError">Please input all the fields</string>
    <string name="children_edit_Cancel">Cancel</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="description">Description</string>
    <string name="res_add">res_add</string>
    <string name="res_edit">res_edit</string>
    <string name="location_ViewChildren">View Children List</string>
    <string name="phone_not_valid">The phone number is not valid. Please input a 10 digits phone number</string>
    <string name="edCh_location_lab">Location</string>
    <string name="edCh_location_txt">Location</string>
    <string name="postal_not_valid">The postal is not valid. Please input a valid postal (e.g. S7H5J7 or S7H 5J7)</string>
    <string name="select_location">Select a location</string>
    <string name="all_location">All Location</string>
    <string name="phone_not_option">Phone#</string>
    <string name="Resea_edit_Privil">Privilege</string>
    <string name="OwnerActivty">OwnerActivty</string>
    <string name="OwnerResearcherEdit">OwnerResearcherEdit</string>
    <string name="OwnerResearcherList">OwnerResearcherList</string>
    <string name="returnBack">Please return the device to the researcher, thank you.</string>
    <string name="survey_result_back">Back to Children List</string>
    <string name="surveyResult">Survey Result</string>
    <string name="survey_for_child">Survey Satas</string>
    <string name="survey_reslab">Researcher</string>
    <string name="survey_locLab">Location</string>
    <string name="surveyDetail">Survey Details</string>
    

</resources>
