<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_marginTop="30dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/suFi_mess_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:text="@string/survey_finish_txt" >

            <requestFocus />
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:orientation="horizontal" >

        <Button  
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/suFi_prev_but"
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"  
            android:layout_weight="1"
            android:text="@string/survey_finish_cancel"/>  
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/suFi_next_but"
            android:layout_width="wrap_content"  
            android:layout_height="fill_parent"  
            android:layout_weight="1"
            android:text="@string/survey_finish_submit"/>

    </LinearLayout>

</LinearLayout>
